# projects-rs

./: Cargo.toml  README.md
src/: cli.rs  daemon.rs  data.rs  main.rs  protocol.rs  socket.rs  util.rs
src/commands/: attach.rs  daemon.rs  delete.rs  kill.rs  list.rs  mod.rs  new.rs  say.rs  start.rs  stop.rs
