[package]
name = "projects-rs"
version = "0.0.1"
edition = "2021"


[dependencies.anyhow]
version = "1.0.89"

[dependencies.clap]
version = "4.5.18"
features = ["derive"]

[dependencies.serde]
version = "1.0.210"
features = ["derive"]

[dependencies.tokio]
version = "1.40.0"
features = ["rt", "macros"]

[dependencies.tokio-serde]
version = "0.9.0"
features = ["bincode"]

[dependencies.tokio-util]
version = "0.7.12"
features = ["codec"]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
