[package]
name = "projects-rs"
version = "0.0.1"
edition = "2021"


[[bin]]
name = "projects"
path = "src/main.rs"

[dependencies]
termion = { version = "4.0.2", default-features = false }
toml = "0.8.19"

[dependencies.anyhow]
version = "1.0.89"

[dependencies.bincode]
version = "1.3.3"

[dependencies.clap]
version = "4.5.18"
features = ["derive"]

[dependencies.serde]
version = "1.0.210"
features = ["derive"]


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
